Various improvements and additions
